crates/smelt-codegen-rust/src/tests/snapshots/smelt_codegen_rust__tests__snapshot_tests__map_collection_emission.snap
---
source: crates/smelt-codegen-rust/src/tests/snapshot_tests.rs
expression: emitted
---
// @generated by smelt. Do not edit by hand.
#![allow(dead_code, non_snake_case, unused_imports, unused_variables)]

// ... shared generated runtime prelude omitted from selective snapshot ...

fn lookup() -> Option<f64> {
    let _smelt_tmp_1: SmeltJsMap<String, f64> = SmeltJsMap::from([("a".to_owned(), 1.0)]);
    let values: SmeltJsMap<String, f64> = _smelt_tmp_1;
    let _smelt_tmp_2: Option<f64> = values.get(&"a".to_owned());
    return _smelt_tmp_2;
}

fn main() {
    return;
}
