crates/smelt-codegen-rust/src/tests/snapshots/smelt_codegen_rust__tests__snapshot_tests__migrated_callback_cfg_emission.snap
---
source: crates/smelt-codegen-rust/src/tests/snapshot_tests.rs
expression: emitted
---
// @generated by smelt. Do not edit by hand.
#![allow(dead_code, non_snake_case, unused_imports, unused_variables)]

// ... shared generated runtime prelude omitted from selective snapshot ...

fn plus_one(values: SmeltList<f64>) -> SmeltList<f64> {
    let _smelt_tmp_1 = ::std::rc::Rc::new(|closure_arg_0: f64, closure_arg_1: i64, closure_arg_2: &SmeltList<f64>| {
    let _smelt_tmp_3: f64 = closure_arg_0 + 1.0;
    _smelt_tmp_3
    });
    let _smelt_tmp_2: SmeltList<f64> = Into::<SmeltList<_>>::into({ let smelt_callback = ::std::rc::Rc::new(|closure_arg_0: f64, closure_arg_1: i64, closure_arg_2: &SmeltList<f64>| {
    let _smelt_tmp_3: f64 = closure_arg_0 + 1.0;
    _smelt_tmp_3
    }); let smelt_array = values.clone(); smelt_array.borrow().iter().enumerate().map(|(index, item)| { (smelt_callback)(item.clone(), index as i64, &smelt_array) }).collect::<Vec<_>>() });
    return _smelt_tmp_2;
}

fn lower(values: SmeltList<String>) -> SmeltList<String> {
    let _smelt_tmp_1 = ::std::rc::Rc::new(|closure_arg_0: String, closure_arg_1: i64, closure_arg_2: &SmeltList<String>| {
    let _smelt_tmp_3: SmeltUnknown = SmeltUnknown::String((closure_arg_0.clone().to_lowercase()).into());
    _smelt_tmp_3.clone()
    });
    let _smelt_tmp_2: SmeltList<SmeltUnknown> = Into::<SmeltList<_>>::into({ let smelt_callback = ::std::rc::Rc::new(|closure_arg_0: String, closure_arg_1: i64, closure_arg_2: &SmeltList<String>| {
    let _smelt_tmp_3: SmeltUnknown = SmeltUnknown::String((closure_arg_0.clone().to_lowercase()).into());
    _smelt_tmp_3.clone()
    }); let smelt_array = values.clone(); smelt_array.borrow().iter().enumerate().map(|(index, item)| { (smelt_callback)(item.clone(), index as i64, &smelt_array) }).collect::<Vec<_>>() });
    return { let smelt_l: SmeltList<_> = _smelt_tmp_2.clone().into(); SmeltList::with_id(smelt_l.id(), smelt_l.into_iter().map(|value| match value.clone() { SmeltUnknown::String(value) | SmeltUnknown::Symbol(value) => value.to_string(), SmeltUnknown::Number(value) => smelt_number_to_string(value), SmeltUnknown::Bool(value) => value.to_string(), SmeltUnknown::Null | SmeltUnknown::Undefined => String::new(), SmeltUnknown::Array(_) | SmeltUnknown::Object(_) => "[object Object]".to_owned(), SmeltUnknown::Function(_) => "function () { [native code] }".to_owned(), SmeltUnknown::Promise(_) => "[object Promise]".to_owned() }).collect::<Vec<_>>()) };
}

fn spread(values: SmeltList<f64>, args: SmeltList<f64>, func: &dyn Fn(SmeltList<f64>) -> f64) -> SmeltList<f64> {
    let _smelt_tmp_3 = ::std::rc::Rc::new({
    let args = args.clone();
    move |closure_arg_0: f64, closure_arg_1: i64, closure_arg_2: &SmeltList<f64>| {
    let _smelt_tmp_5: SmeltList<f64> = Into::<SmeltList<_>>::into(SmeltList::from({ let smelt_list_items: Vec<f64> = vec![closure_arg_0]; smelt_list_items }));
    let _smelt_tmp_6: SmeltList<f64> = Into::<SmeltList<_>>::into(args.clone().borrow().iter().cloned().chain(_smelt_tmp_5.clone().borrow().iter().cloned()).collect::<Vec<_>>());
    let _smelt_tmp_7: f64 = func(_smelt_tmp_6.clone());
    _smelt_tmp_7
    }
});
    let _smelt_tmp_4: SmeltList<f64> = Into::<SmeltList<_>>::into({ let smelt_callback = ::std::rc::Rc::new({
    let args = args.clone();
    move |closure_arg_0: f64, closure_arg_1: i64, closure_arg_2: &SmeltList<f64>| {
    let _smelt_tmp_5: SmeltList<f64> = Into::<SmeltList<_>>::into(SmeltList::from({ let smelt_list_items: Vec<f64> = vec![closure_arg_0]; smelt_list_items }));
    let _smelt_tmp_6: SmeltList<f64> = Into::<SmeltList<_>>::into(args.clone().borrow().iter().cloned().chain(_smelt_tmp_5.clone().borrow().iter().cloned()).collect::<Vec<_>>());
    let _smelt_tmp_7: f64 = func(_smelt_tmp_6.clone());
    _smelt_tmp_7
    }
}); let smelt_array = values.clone(); smelt_array.borrow().iter().enumerate().map(|(index, item)| { (smelt_callback)(item.clone(), index as i64, &smelt_array) }).collect::<Vec<_>>() });
    return _smelt_tmp_4;
}

fn collect_indices(values: SmeltList<f64>) -> SmeltList<f64> {
    let mut _value: f64;
    let mut index: f64;
    let mut _smelt_tmp_7: f64;
    let mut _smelt_tmp_8: bool;
    let mut _smelt_tmp_9: f64;
    let mut _smelt_tmp_10: f64;
    let _smelt_tmp_5: SmeltList<f64> = Into::<SmeltList<_>>::into(SmeltList::from({ let smelt_list_items: Vec<f64> = vec![]; smelt_list_items }));
    let mut indices: SmeltList<f64> = Into::<SmeltList<_>>::into(_smelt_tmp_5);
    let mut __for_each_index: f64 = 0.0;
    let mut _smelt_tmp_6: f64 = 0.0;
    loop {
    _smelt_tmp_7 = values.len() as f64;
    _smelt_tmp_8 = _smelt_tmp_6 < _smelt_tmp_7;
    if !(_smelt_tmp_8) { break; }
    _value = values.borrow().get({ let smelt_normalized = _smelt_tmp_6 as i64; usize::try_from(smelt_normalized).unwrap_or(usize::MAX) }).cloned().unwrap_or_else(|| 0.0);
    index = __for_each_index;
    _smelt_tmp_9 = __for_each_index + 1.0;
    __for_each_index = _smelt_tmp_9;
    _smelt_tmp_10 = { let smelt_push_item = index; indices.borrow_mut().push(smelt_push_item); indices.len() as f64 };
    _smelt_tmp_6 = _smelt_tmp_6 + 1.0;
    }
    return indices;
}

fn iso(values: SmeltList<SmeltUnknown>) -> SmeltList<String> {
    let _smelt_tmp_1 = ::std::rc::Rc::new(|closure_arg_0: &SmeltUnknown, closure_arg_1: i64, closure_arg_2: &SmeltList<SmeltUnknown>| {
    let _smelt_tmp_3: String = (closure_arg_0.clone()).to_iso_string();
    let _smelt_tmp_4: SmeltUnknown = SmeltUnknown::String((_smelt_tmp_3.clone()).into());
    _smelt_tmp_4.clone()
    });
    let _smelt_tmp_2: SmeltList<SmeltUnknown> = Into::<SmeltList<_>>::into({ let smelt_callback = ::std::rc::Rc::new(|closure_arg_0: &SmeltUnknown, closure_arg_1: i64, closure_arg_2: &SmeltList<SmeltUnknown>| {
    let _smelt_tmp_3: String = (closure_arg_0.clone()).to_iso_string();
    let _smelt_tmp_4: SmeltUnknown = SmeltUnknown::String((_smelt_tmp_3.clone()).into());
    _smelt_tmp_4.clone()
    }); let smelt_array = values.clone(); smelt_array.borrow().iter().enumerate().map(|(index, item)| { (smelt_callback)(item, index as i64, &smelt_array) }).collect::<Vec<_>>() });
    return { let smelt_l: SmeltList<_> = _smelt_tmp_2.clone().into(); SmeltList::with_id(smelt_l.id(), smelt_l.into_iter().map(|value| match value.clone() { SmeltUnknown::String(value) | SmeltUnknown::Symbol(value) => value.to_string(), SmeltUnknown::Number(value) => smelt_number_to_string(value), SmeltUnknown::Bool(value) => value.to_string(), SmeltUnknown::Null | SmeltUnknown::Undefined => String::new(), SmeltUnknown::Array(_) | SmeltUnknown::Object(_) => "[object Object]".to_owned(), SmeltUnknown::Function(_) => "function () { [native code] }".to_owned(), SmeltUnknown::Promise(_) => "[object Promise]".to_owned() }).collect::<Vec<_>>()) };
}

fn main() {
    return;
}
