crates/smelt-codegen-rust/src/tests/snapshots/smelt_codegen_rust__tests__snapshot_tests__nested_loop_control_flow_emission.snap
---
source: crates/smelt-codegen-rust/src/tests/snapshot_tests.rs
expression: emitted
---
// @generated by smelt. Do not edit by hand.
#![allow(dead_code, non_snake_case, unused_imports, unused_variables)]

// ... shared generated runtime prelude omitted from selective snapshot ...

fn collect(values: SmeltList<f64>, flags: SmeltList<bool>) -> f64 {
    let mut value: f64;
    let mut _smelt_tmp_5: f64;
    let mut _smelt_tmp_6: bool;
    let mut _smelt_tmp_7: f64;
    let mut _smelt_tmp_8: f64;
    let mut _smelt_tmp_9: f64;
    let mut _smelt_tmp_10: bool;
    let mut _smelt_tmp_11: bool;
    let mut _smelt_tmp_12: f64;
    let mut _smelt_tmp_13: f64;
    let mut total: f64 = 0.0;
    let mut index: f64 = 0.0;
    loop {
    _smelt_tmp_5 = flags.len() as f64;
    _smelt_tmp_6 = index < _smelt_tmp_5;
    if !(_smelt_tmp_6) { break; }
    if flags.borrow().get({ let smelt_normalized = index as i64; usize::try_from(smelt_normalized).unwrap_or(usize::MAX) }).cloned().unwrap_or_else(|| false) {
    _smelt_tmp_7 = index + 1.0;
    index = _smelt_tmp_7;
    continue;
    } else {
    _smelt_tmp_8 = 0.0;
    loop {
    _smelt_tmp_9 = values.len() as f64;
    _smelt_tmp_10 = _smelt_tmp_8 < _smelt_tmp_9;
    if !(_smelt_tmp_10) { break; }
    value = values.borrow().get({ let smelt_normalized = _smelt_tmp_8 as i64; usize::try_from(smelt_normalized).unwrap_or(usize::MAX) }).cloned().unwrap_or_else(|| 0.0);
    _smelt_tmp_11 = value > 2.0;
    if _smelt_tmp_11 {
    break;
    } else {
    _smelt_tmp_12 = total + value;
    total = _smelt_tmp_12;
    _smelt_tmp_8 = _smelt_tmp_8 + 1.0;
    continue;
    }
    }
    _smelt_tmp_13 = index + 1.0;
    index = _smelt_tmp_13;
    }
    }
    return total;
}

fn main() {
    return;
}
