crates/smelt-codegen-rust/src/tests/snapshots/smelt_codegen_rust__tests__snapshot_tests__python_map_filter_lambda_emission.snap
---
source: crates/smelt-codegen-rust/src/tests/snapshot_tests.rs
expression: emitted
---
// @generated by smelt. Do not edit by hand.
#![allow(dead_code, non_snake_case, unused_imports, unused_variables)]

// ... shared generated runtime prelude omitted from selective snapshot ...

fn main() {
    let _smelt_tmp_3: SmeltList<i64> = Into::<SmeltList<_>>::into(SmeltList::from({ let smelt_list_items: Vec<i64> = vec![1, 2, 3]; smelt_list_items }));
    let values: SmeltList<i64> = Into::<SmeltList<_>>::into(_smelt_tmp_3);
    let _smelt_tmp_4 = ::std::rc::Rc::new(|closure_arg_0: i64| {
    let _smelt_tmp_1: i64 = closure_arg_0 * 2;
    _smelt_tmp_1
    });
    let _smelt_tmp_5: SmeltList<i64> = Into::<SmeltList<_>>::into({ let smelt_callback = ::std::rc::Rc::new(|closure_arg_0: i64| {
    let _smelt_tmp_1: i64 = closure_arg_0 * 2;
    _smelt_tmp_1
    }); values.borrow().iter().enumerate().map(|(index, item)| { (smelt_callback)(item.clone()) }).collect::<Vec<_>>() });
    let doubled: SmeltList<i64> = Into::<SmeltList<_>>::into(_smelt_tmp_5);
    let _smelt_tmp_6 = ::std::rc::Rc::new(|closure_arg_0: i64| {
    let _smelt_tmp_1: bool = closure_arg_0 > 1;
    _smelt_tmp_1
    });
    let _smelt_tmp_7: SmeltList<i64> = Into::<SmeltList<_>>::into({ let smelt_callback = ::std::rc::Rc::new(|closure_arg_0: i64| {
    let _smelt_tmp_1: bool = closure_arg_0 > 1;
    _smelt_tmp_1
    }); values.borrow().iter().enumerate().filter_map(|(index, item)| if (smelt_callback)(item.clone()) { Some(item.clone()) } else { None }).collect::<Vec<_>>() });
    let positives: SmeltList<i64> = Into::<SmeltList<_>>::into(_smelt_tmp_7);
    return;
}
