crates/smelt-codegen-rust/src/tests/snapshots/smelt_codegen_rust__tests__snapshot_tests__python_nested_def_closure_emission.snap
---
source: crates/smelt-codegen-rust/src/tests/snapshot_tests.rs
expression: emitted
---
// @generated by smelt. Do not edit by hand.
#![allow(dead_code, non_snake_case, unused_imports, unused_variables)]

// ... shared generated runtime prelude omitted from selective snapshot ...

fn make_adder(base: i64) -> ::std::rc::Rc<dyn Fn(i64) -> i64> {
    let _smelt_tmp_2 = ::std::rc::Rc::new({
    let base = base.clone();
    move |closure_arg_0: i64| {
    let _smelt_tmp_2: i64 = closure_arg_0.clone() + base.clone();
    _smelt_tmp_2.clone()
    }
});
    return _smelt_tmp_2.clone();
}

fn main() {
    let adder: ::std::rc::Rc<dyn Fn(i64) -> i64>;
    let result: i64;
    let _smelt_tmp_3: i64;
    let _smelt_tmp_2 = make_adder(5).clone();
    adder = _smelt_tmp_2.clone();
    _smelt_tmp_3 = (adder)(6);
    result = _smelt_tmp_3.clone();
    return;
}
