crates/smelt-codegen-rust/src/tests/snapshots/smelt_codegen_rust__tests__snapshot_tests__short_circuit_guard_control_flow_emission.snap
---
source: crates/smelt-codegen-rust/src/tests/snapshot_tests.rs
expression: emitted
---
// @generated by smelt. Do not edit by hand.
#![allow(dead_code, non_snake_case, unused_imports, unused_variables)]

// ... shared generated runtime prelude omitted from selective snapshot ...

fn valid(value: bool) -> bool {
    return value.clone();
}

fn count(a: bool, b: bool) -> f64 {
    let mut result: f64;
    let _smelt_tmp_4: bool;
    let mut _smelt_tmp_5: bool;
    let _smelt_tmp_7: bool;
    let _smelt_tmp_8: f64;
    let _smelt_tmp_3: bool = valid(a.clone());
    _smelt_tmp_4 = !(_smelt_tmp_3);
    if _smelt_tmp_4 {
    _smelt_tmp_5 = true;
    } else {
    let _smelt_tmp_6: bool = valid(b.clone());
    _smelt_tmp_7 = !(_smelt_tmp_6);
    _smelt_tmp_5 = _smelt_tmp_7;
    }
    if _smelt_tmp_5 {
    return f64::NAN;
    } else {
    result = 0.0;
    if a.clone() {
    _smelt_tmp_8 = result + 1.0;
    result = _smelt_tmp_8;
    }
    return result;
    }
}

fn main() {
    return;
}
