crates/smelt-codegen-rust/src/tests/snapshots/smelt_codegen_rust__tests__snapshot_tests__string_index_and_for_of_emission.snap
---
source: crates/smelt-codegen-rust/src/tests/snapshot_tests.rs
expression: emitted
---
// @generated by smelt. Do not edit by hand.
#![allow(dead_code, non_snake_case, unused_imports, unused_variables)]

// ... shared generated runtime prelude omitted from selective snapshot ...

fn main() {
    let mut ch: String;
    let mut _smelt_tmp_8: f64;
    let mut _smelt_tmp_9: bool;
    let mut _smelt_tmp_10: String;
    let word: String = "abc".to_owned();
    let first: String = word.chars().nth({ let smelt_normalized = 0.0 as i64; usize::try_from(smelt_normalized).unwrap_or(usize::MAX) }).map(|ch| ch.to_string()).unwrap_or_default();
    let _smelt_tmp_5: f64 = -1.0;
    let _smelt_tmp_6: Option<String> = ({ let smelt_len = word.clone().chars().count() as i64; let smelt_index = _smelt_tmp_5 as i64; let smelt_normalized = if smelt_index < 0 { smelt_len + smelt_index } else { smelt_index }; usize::try_from(smelt_normalized).ok() }).and_then(|index| word.clone().chars().nth(index).map(|ch| ch.to_string()));
    let last: Option<String> = _smelt_tmp_6;
    let mut joined: String = "".to_owned();
    let mut _smelt_tmp_7: f64 = 0.0;
    loop {
    _smelt_tmp_8 = word.chars().count() as f64;
    _smelt_tmp_9 = _smelt_tmp_7 < _smelt_tmp_8;
    if !(_smelt_tmp_9) { break; }
    ch = word.chars().nth({ let smelt_normalized = _smelt_tmp_7 as i64; usize::try_from(smelt_normalized).unwrap_or(usize::MAX) }).map(|ch| ch.to_string()).unwrap_or_default();
    _smelt_tmp_10 = joined + &ch;
    joined = _smelt_tmp_10;
    _smelt_tmp_7 = _smelt_tmp_7 + 1.0;
    }
    return;
}
