crates/smelt-codegen-rust/src/tests/snapshots/smelt_codegen_rust__tests__snapshot_tests__string_method_surface_emission.snap
---
source: crates/smelt-codegen-rust/src/tests/snapshot_tests.rs
expression: emitted
---
// @generated by smelt. Do not edit by hand.
#![allow(dead_code, non_snake_case, unused_imports, unused_variables)]

// ... shared generated runtime prelude omitted from selective snapshot ...

fn main() {
    let word: String = "Smelt".to_owned();
    let _smelt_tmp_13: String = word.clone().to_lowercase();
    let lower: String = _smelt_tmp_13.clone();
    let _smelt_tmp_14: String = word.clone().to_uppercase();
    let upper: String = _smelt_tmp_14.clone();
    let _smelt_tmp_15: String = word.clone().trim().to_owned();
    let trimmed: String = _smelt_tmp_15.clone();
    let _smelt_tmp_16: String = word.clone();
    let _smelt_tmp_17: String = "Sm".to_owned();
    let _smelt_tmp_18: bool = word.clone().starts_with(&_smelt_tmp_17.clone());
    let starts: bool = _smelt_tmp_18.clone();
    let _smelt_tmp_19: String = word.clone();
    let _smelt_tmp_20: String = "lt".to_owned();
    let _smelt_tmp_21: bool = word.clone().ends_with(&_smelt_tmp_20.clone());
    let ends: bool = _smelt_tmp_21.clone();
    let _smelt_tmp_22: f64 = word.clone().find(&"m".to_owned()).map_or(-1.0, |idx| idx as f64);
    let first: f64 = _smelt_tmp_22.clone();
    let _smelt_tmp_23: f64 = word.clone().rfind(&"t".to_owned()).map_or(-1.0, |idx| idx as f64);
    let last: f64 = _smelt_tmp_23.clone();
    let _smelt_tmp_24: String = word.clone().replacen(&"Sm".to_owned(), &"sm".to_owned(), 1);
    let replaced: String = _smelt_tmp_24.clone();
    let _smelt_tmp_25: String = word.clone().repeat(3.0 as usize);
    let repeated: String = _smelt_tmp_25.clone();
    let _smelt_tmp_26: String = { let value = &word.clone(); let target_len = 8.0 as usize; let pad = &"0".to_owned(); let current_len = value.chars().count(); if current_len >= target_len || pad.is_empty() { value.to_owned() } else { let needed = target_len - current_len; let padding: String = pad.chars().cycle().take(needed).collect(); format!("{}{}", padding, value) } };
    let padded_start: String = _smelt_tmp_26.clone();
    let _smelt_tmp_27: String = word.clone().chars().nth(1.0 as usize).map(|ch| ch.to_string()).unwrap_or_default();
    let ch: String = _smelt_tmp_27.clone();
    let _smelt_tmp_28: f64 = word.clone().chars().nth(2.0 as usize).map_or(f64::NAN, |ch| ch as u32 as f64);
    let code: f64 = _smelt_tmp_28.clone();
    return;
}
