crates/smelt-codegen-rust/src/tests/snapshots/smelt_codegen_rust__tests__snapshot_tests__unknown_narrowing_and_cast_emission.snap
---
source: crates/smelt-codegen-rust/src/tests/snapshot_tests.rs
expression: emitted
---
// @generated by smelt. Do not edit by hand.
#![allow(dead_code, non_snake_case, unused_imports, unused_variables)]

// ... shared generated runtime prelude omitted from selective snapshot ...

fn box_string() -> SmeltUnknown {
    return SmeltUnknown::String("ready".into());
}

fn read_string(value: SmeltUnknown) -> String {
    let _smelt_tmp_2: String;
    let _smelt_tmp_3: String;
    let _smelt_tmp_1: bool = matches!(value.clone(), SmeltUnknown::String(_));
    if _smelt_tmp_1 {
    _smelt_tmp_2 = match value.clone() { SmeltUnknown::String(value) | SmeltUnknown::Symbol(value) => value.to_string(), SmeltUnknown::Number(value) => smelt_number_to_string(value), SmeltUnknown::Bool(value) => value.to_string(), SmeltUnknown::Null | SmeltUnknown::Undefined => String::new(), SmeltUnknown::Array(_) | SmeltUnknown::Object(_) => "[object Object]".to_owned(), SmeltUnknown::Function(_) => "function () { [native code] }".to_owned(), SmeltUnknown::Promise(_) => "[object Promise]".to_owned() };
    return _smelt_tmp_2;
    } else {
    _smelt_tmp_3 = match value.clone() { SmeltUnknown::String(value) | SmeltUnknown::Symbol(value) => value.to_string(), SmeltUnknown::Number(value) => smelt_number_to_string(value), SmeltUnknown::Bool(value) => value.to_string(), SmeltUnknown::Null | SmeltUnknown::Undefined => String::new(), SmeltUnknown::Array(_) | SmeltUnknown::Object(_) => "[object Object]".to_owned(), SmeltUnknown::Function(_) => "function () { [native code] }".to_owned(), SmeltUnknown::Promise(_) => "[object Promise]".to_owned() };
    return _smelt_tmp_3;
    }
}

fn is_array(value: SmeltUnknown) -> bool {
    let _smelt_tmp_1: bool = matches!(value.clone(), SmeltUnknown::Array(_));
    return _smelt_tmp_1;
}

fn main() {
    return;
}
